Tweak footer social and design

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@ layout: default
             <h2>Hello, my name is Gamble.</h2>
             <p>I make things.</p>
           </div><!-- caption -->
-          <div class="photocaption">
-            <h4>Shot by <a href="http://dribbble.com/noptar">Mani</a></h4>
-          </div><!-- photocaption -->
           <div class="intro-mockup">
             <img src="images/affordably.png" alt="">
           </div><!-- intro-mockup -->
@@ -25,9 +22,6 @@ layout: default
             <h2>When I make things I feel good.</h2>
             <p>When I help people make things I feel even better.</p>
           </div><!-- caption -->
-          <div class="photocaption">
-            <h4>Shot by <a href="http://dribbble.com/noptar">Mani</a></h4>
-          </div><!-- photocaption -->
           <div class="intro-mockup">
             <img src="images/gibson.png" alt="">
           </div><!-- intro-mockup -->
@@ -39,9 +33,6 @@ layout: default
             <h2>I know the best feeling in the world.</h2>
             <p>It is when people smile using the things I make.</p>
           </div><!-- caption -->
-          <div class="photocaption">
-            <h4>Shot by <a href="http://dribbble.com/noptar">Mani</a></h4>
-          </div><!-- photocaption -->
           <div class="intro-mockup">
             <img src="images/one_banana.png" alt="">
           </div><!-- intro-mockup -->
@@ -90,7 +81,7 @@ layout: default
         <div class="column six push-six last-special">
           <h2>Web Apps</h2>
           <p>I was taught at <a href="http://www.makersquare.com/" target="_blank">MakerSquare</a> how to make full-stack web applications.</p>
-          <p><em>- Screenshot of <a href="http://www.affordably.me/demo#/daily" target="_blank">Affordably</a>.</em></p>
+          <p><em>- Screenshots of <a href="http://www.affordably.me/demo#/daily" target="_blank">Affordably</a>.</em></p>
           <!-- <a class="button transparent aqua" href="#">Explore</a> -->
         </div>
         <div class="side-mockup left-mockup animation">
