--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,9 @@ permalink: resume/
 					<h2>Developer &amp; Maker</h2>
 					<p>Building new products at any given moment.</p>
 				</div><!-- caption -->
-				<div class="photocaption">
-					<h4>Shot by <a href="http://danielezedda.com/">Daniele Zedda</a></h4>
-				</div><!-- photocaption -->
+				<!-- <div class="photocaption"> -->
+					<!-- <h4>Shot by <a href="http://danielezedda.com/">Daniele Zedda</a></h4> -->
+				<!-- </div> -->
 			</div>
 		</div><!-- intro -->
 	</div><!-- intro-wrap -->
@@ -22,17 +22,18 @@ permalink: resume/
 
 		<section class="row section">
 			<div class="row-content buffer even clear-after">
-				<div class="custom-carousel" data-autoplay="5000" data-pagination="true" data-transition="fade" data-autoheight="false">
+				<!-- <div class="custom-carousel" data-autoplay="5000" data-pagination="true" data-transition="fade" data-autoheight="false"> -->
+				<div>
 					<div class="carousel-item">
 						<div class="column four">
-							<img src="http://placehold.it/800x300/ddd/fff&text=Beetle%20image" alt="">
+							<img src="../images/resume_photo.jpg" alt="">
 						</div>
 						<div class="column eight last">
-							<h3>I create simple interfaces for humans and enjoy pixel-perfection.</h3>
-							<p>I’m an experienced and passionate user interface designer with interaction design background.</p>
+							<h3>I create simple interfaces for humans.</h3>
+							<p>I’m a passionate full-stack developer with a startup background. I enjoy wearing many hats.</p>
 						</div>
 					</div><!-- carousel-item -->
-					<div class="carousel-item">
+<!-- 					<div class="carousel-item">
 						<div class="column four">
 							<img src="http://placehold.it/800x300/ddd/fff&text=Beetle%20image" alt="">
 						</div>
@@ -40,7 +41,7 @@ permalink: resume/
 							<h3>I am a top experience designer.</h3>
 							<p>I’m an experienced and passionate user interface designer with interaction design background.</p>
 						</div>
-					</div><!-- carousel-item -->
+					</div>
 					<div class="carousel-item">
 						<div class="column four">
 							<img src="http://placehold.it/800x300/ddd/fff&text=Beetle%20image" alt="">
@@ -49,7 +50,7 @@ permalink: resume/
 							<h3>I am a Themeforest Elite Author.</h3>
 							<p>I’m an experienced and passionate user interface designer with interaction design background.</p>
 						</div>
-					</div><!-- carousel-item -->
+					</div> -->
 				</div>
 			</div>
 		</section>
@@ -302,7 +303,7 @@ permalink: resume/
 		</section>
 
 		<section class="row section">
-			<div class="map" id="map_1" data-maplat="51.511214" data-maplon="-0.119824" data-mapzoom="5" data-color="aqua" data-height="22.222" data-img="img/marker.png" data-info="Based in London, UK"></div>
+			<div class="map" id="map_1" data-maplat="51.511214" data-maplon="-0.119824" data-mapzoom="5" data-color="aqua" data-height="22.222" data-img="../images/marker.png" data-info="Based in London, UK"></div>
 		</section>
 
 	</div><!-- id-main -->
