--- a/resume.html
+++ b/resume.html
@@ -32,55 +32,32 @@ permalink: resume/
 							<h3>I create simple interfaces for humans.</h3>
 							<p>I am a passionate full-stack developer with a startup background. I enjoy wearing many hats and if the shoe doesn't fit, I learn to be a cobbler.</p>
 						</div>
+						<div class="more-btn"><a class="button transparent aqua" href="{{site.data.routes.portfolio}}">Browse Portfolio</a></div>
 					</div><!-- carousel-item -->
-<!-- 					<div class="carousel-item">
-						<div class="column four">
-							<img src="http://placehold.it/800x300/ddd/fff&text=Beetle%20image" alt="">
-						</div>
-						<div class="column eight last">
-							<h3>I am a top experience designer.</h3>
-							<p>I’m an experienced and passionate user interface designer with interaction design background.</p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<div class="column four">
-							<img src="http://placehold.it/800x300/ddd/fff&text=Beetle%20image" alt="">
-						</div>
-						<div class="column eight last">
-							<h3>I am a Themeforest Elite Author.</h3>
-							<p>I’m an experienced and passionate user interface designer with interaction design background.</p>
-						</div>
-					</div> -->
 				</div>
-			</div>
-		</section>
-
-		<section class="row section">
-			<div class="row-content buffer even clear-after">
-				<div class="more-btn"><a class="button transparent aqua" href="{{site.data.routes.portfolio}}">Browse Portfolio</a></div>
 			</div>
 		</section>
 
 		<section class="row section text-light" style="background-color: #96C962;">
 			<div class="row-content buffer even clear-after">
 				<div class="section-title"><h3>Skills</h3></div>
-				<p class="centertxt">I’m an experienced and passionate user interface designer with interaction design background.<br>My goal is to make the world wide web a better place by designing beautiful user experiences, one site at a time.</p>
+				<p class="centertxt">I’m a junior to mid-level full-stack developer looking for opportunities to hone my skills while creating awesome technology.<br>My goal is to make the world wide web a better place by developing immersive user experiences, one site at a time.</p>
 				<div class="chart" data-percent="73" data-bar-color="#7ab746" data-animate="2000">
 					<div class="chart-content">
 						<div class="percent"></div>
-						<div class="chart-title">User Interface</div>
+						<div class="chart-title">JavaScript</div>
 					</div><!-- chart-content -->
 				</div><!-- chart -->
-				<div class="chart" data-percent="85" data-bar-color="#7ab746" data-animate="2500">
+				<div class="chart" data-percent="65" data-bar-color="#7ab746" data-animate="2500">
 					<div class="chart-content">
 						<div class="percent"></div>
-						<div class="chart-title">Front-end</div>
+						<div class="chart-title">Ruby on Rails</div>
 					</div><!-- chart-content -->
 				</div><!-- chart -->
 				<div class="chart" data-percent="70" data-bar-color="#7ab746" data-animate="3000">
 					<div class="chart-content">
 						<div class="percent"></div>
-						<div class="chart-title">User Experience</div>
+						<div class="chart-title">HTML &amp; CSS</div>
 					</div><!-- chart-content -->
 				</div><!-- chart -->
 			</div>
@@ -90,7 +67,7 @@ permalink: resume/
 			<div class="row-content buffer even clear-after">
 				<div class="timeline-label column six">
 					<h4>Work experience</h4>
-					<p>Specialties : User experience design, user interface design, brand identity, typography, print and packaging design, web standards, grid based layout.</p>
+					<p>Specialties : Front-end frameworks (AngularJS, Backbone), user interface design, mobile-first development, payments integration (Stripe), MVP planning and development, grid based layout.</p>
 					<a class="button transparent aqua">View on Linkedin</a>
 				</div><!-- timeline-label -->
 				<div class="timeline column six last">
@@ -100,7 +77,7 @@ permalink: resume/
 							{% if employ.year == 2014 %}
 						<div class="experience">
 							<span class="circle"></span>
-							<div class="experience-img"><img src="http://placehold.it/120x120/ddd/fff&text=Beetle%20image" alt=""></div>
+							<div class="experience-img"><img src="{{employ.image}}" alt=""></div>
 							<div class="experience-info clear-after">
 								<h5>{{employ.employer}}</h5>
 								<div class="role">{{employ.role}}</div>
@@ -114,7 +91,7 @@ permalink: resume/
 							{% if employ.year == 2013 %}
 						<div class="experience">
 							<span class="circle"></span>
-							<div class="experience-img"><img src="http://placehold.it/120x120/ddd/fff&text=Beetle%20image" alt=""></div>
+							<div class="experience-img"><img src="{{employ.image}}" alt=""></div>
 							<div class="experience-info clear-after">
 								<h5>{{employ.employer}}</h5>
 								<div class="role">{{employ.role}}</div>
@@ -128,7 +105,7 @@ permalink: resume/
 							{% if employ.year == 2012 %}
 						<div class="experience">
 							<span class="circle"></span>
-							<div class="experience-img"><img src="http://placehold.it/120x120/ddd/fff&text=Beetle%20image" alt=""></div>
+							<div class="experience-img"><img src="{{employ.image}}" alt=""></div>
 							<div class="experience-info clear-after">
 								<h5>{{employ.employer}}</h5>
 								<div class="role">{{employ.role}}</div>
@@ -142,29 +119,8 @@ permalink: resume/
 			</div>
 		</section>
 
-		<section class="row section text-light" style="background-color:#FF605F;">
-			<div class="row-content buffer even clear-after">
-				<div class="testimonial-slider centertxt" data-autoplay="5000" data-pagination="true" data-transition="fade" data-autoheight="false">
-					<div class="quote">
-						<div class="column twelve last">
-							<p>"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."</p>
-							<div class="author">John Lennon</div>
-						</div><!-- column -->
-					</div><!-- quote -->
-					<div class="quote">
-						<div class="column twelve last">
-							<p>"Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy."</p>
-							<div class="author">Fabrizio De Andr&egrave;</div>
-						</div><!-- column -->
-					</div><!-- quote -->
-					<div class="quote">
-						<div class="column twelve last">
-							<p>"There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour."</p>
-							<div class="author">B.B. King</div>
-						</div><!-- column -->
-					</div><!-- quote -->
-				</div><!-- testimonial-slider -->
-			</div>
+		<section class="row section">
+			<div class="map" id="map_1" data-maplat="30.267153" data-maplon="-97.74306079999997" data-mapzoom="5" data-color="aqua" data-height="22.222" data-img="../images/marker.png" data-info="Based in Austin, TX"></div>
 		</section>
 
 		<section class="row section">
@@ -184,9 +140,9 @@ permalink: resume/
 					<div class="widget">
 						<h4>Location</h4>
 						<p>
-							13, 2 Elizabeth ST,<br>
-							Melbourne, Victoria 3000,<br>
-							Australia
+							901 Red River St.<br>
+							Austin, TX 78701<br>
+							United States of America
 						</p>
 					</div>
 					<div class="widget">
@@ -194,15 +150,10 @@ permalink: resume/
 						<ul class="inline meta-social">
 							<li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
 							<li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
-							<li><a href="#" class="pinterest-share border-box"><i class="fa fa-pinterest fa-lg"></i></a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<section class="row section">
-			<div class="map" id="map_1" data-maplat="30.267153" data-maplon="-97.74306079999997" data-mapzoom="5" data-color="aqua" data-height="22.222" data-img="../images/marker.png" data-info="Based in Austin, TX"></div>
 		</section>
 
 	</div><!-- id-main -->
