--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
         <div class="column six">
           <h2>Mobile Apps</h2>
           <p>I am self taught in the Swift language and Famous mobile framework in javascript.</p>
-          <p><em>- Screenshot of <a href="http://isopods.herokuapp.com/rent" target="_blank">IsoPds</a>.</em></p>
+          <p><em>- Screenshot of <a href="http://isopods.herokuapp.com/rent" target="_blank">IsoPods</a>.</em></p>
           <!-- <a class="button transparent aqua" href="#">Explore</a> -->
         </div>
         <div class="side-mockup right-mockup animation">
