--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,9 @@ permalink: portfolio/
 		<div id="intro" class="preload darken more-button">
 			<div class="intro-item" style="background-image: url(../images/52.jpg);">
 				<div class="caption">
-					<h2>Tools</h2>
-					<p>For me, the camera is a sketch book, an instrument of intuition and spontaneity.</p>
+					<h2>My Work</h2>
+					<p>What I create is who I am and vice versa, so I am constantly striving to be better.</p>
 				</div><!-- caption -->
-				<div class="photocaption">
-					<h4>A shot by <a href="../images/52.jpg" target="blank" alt="Vadim Sherbakov">Vadim Sherbakov</a></h4>
-				</div><!-- photocaption -->
 			</div>
 		</div><!-- intro -->
 	</div><!-- intro-wrap -->
@@ -21,13 +18,9 @@ permalink: portfolio/
 	<div id="main" class="row">
 		<div class="row-content buffer clear-after">
 			<ul class="inline cats filter-options">
-				<li data-group="advertising">Advertising</li>
-				<li data-group="fun">Fun</li>
-				<li data-group="icons">Icons</li>
-				<li data-group="infographics">Infographics</li>
-				<li data-group="lightbox">Lightbox</li>
-				<li data-group="minimal">Minimal</li>
-				<li data-group="web-design">Web design</li>
+				<li data-group="web-development" class="groups">Web Development</li>,
+				<li data-group="user-interface" class="groups">User Interface</li>,
+				<li data-group="marketing-site" class="groups">Marketing Site</li>
 			</ul>
 			<div class="grid-items portfolio-section preload">
 				{% for item in site.portfolio %}
