--- a/blog.html
+++ b/blog.html
@@ -21,10 +21,10 @@ permalink: blog/
 				{% for post in site.posts %}
 				<article class="clear-after">
 					<div class="column three">
-						<figure><img src="http://unsplash.it/600x600" alt=""></figure>
+						<figure><img src="{{post.image}}" class="blog-image" alt=""></figure>
 					</div><!-- column three -->
 					<div class="column nine last">
-						<h2><a href="#">{{post.title}}</a></h2>
+						<h2><a href="{{post.url}}">{{post.title}}</a></h2>
 						<h5 class="meta-post">
 							{% for category in post.tags %}
 								{% if category == post.tags.last %}
@@ -55,16 +55,15 @@ permalink: blog/
 				<div class="widget">
 					<h4>About the Blog</h4>
 					<div class="textwidget">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+						This blog is my mind's outlet. Since my mind is never in one place for too long you will see posts from a wide variety of topics. I hope you find value or entertainment in my words because that is the highest form of praise for me. Thank you for reading.
 					</div><!-- la class="textwidget" è forse generata automaticamente da wp -->
 				</div>
 				<div class="widget">
 					<h4>Recent Posts</h4>
 					<ul class="plain">
-						<li><a href="#">Uff e che fatica</a></li>
-						<li><a href="#">Un weekend al mare</a></li>
-						<li><a href="#">Il signor Kasper</a></li>
-						<li><a href="#">Ottimo lavoro</a></li>
+						{% for post in site.posts limit:5 %}
+							<li><a href="{{post.url}}">{{post.title}}</a></li>
+						{% endfor %}
 					</ul>
 				</div>
 			</aside>
