--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,10 @@ permalink: portfolio/
 	<div id="main" class="row">
 		<div class="row-content buffer clear-after">
 			<ul class="inline cats filter-options">
-				<li data-group="web-development" class="groups">Web Development</li>,
-				<li data-group="user-interface" class="groups">User Interface</li>,
-				<li data-group="marketing-site" class="groups">Marketing Site</li>
+				<li data-group="all" class="button transparent aqua more-btn">All</li>
+				<li data-group="web-development" class="button transparent aqua more-btn">Web Development</li>
+				<li data-group="user-interface" class="button transparent aqua more-btn">User Interface</li>
+				<li data-group="marketing-site" class="button transparent aqua more-btn">Marketing Site</li>
 			</ul>
 			<div class="grid-items portfolio-section preload">
 				{% for item in site.portfolio %}
