--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ permalink: contact/
 		<section class="row section">
 			<div class="row-content buffer even clear-after">
 				<div class="section-title"><h3>Contact Me</h3></div>
-				<p>I’m an experienced and passionate user interface designer with interaction design background.<br>My goal is to make the world wide web a better place by designing beautiful user experiences, one site at a time.</p>
+				<p>I’m a junior to mid-level full-stack developer looking for opportunities to hone my skills while creating awesome technology.<br>My goal is to make the world wide web a better place by developing immersive user experiences, one site at a time.</p>
 				<div class="column nine">
 					<form accept-charset="UTF-8" action="https://formkeep.com/f/dd2b6c0c1f02" method="POST" id="contact-form" class="contact-section">
 					  <input type="hidden" name="utf8" value="✓">
@@ -25,13 +25,6 @@ permalink: contact/
 					  <input class="email plain buffer" type="email" name="email" placeholder="Email address">
 					  <textarea class="plain buffer" name="message" placeholder="Don't forget that kindness is all!"></textarea>
 					  <input id="send" class="plain button red" type="button" value="Send a Message">
-<!-- 					<form id="contact-form" class="contact-section" method="post" action="">
-						<span class="pre-input"><i class="icon icon-user"></i></span>
-						<input class="name plain buffer" type="text" name="name" placeholder="Full name">
-						<span class="pre-input"><i class="icon icon-email"></i></span>
-						<input class="email plain buffer" type="email" name="email" placeholder="Email address">
-						<textarea class="plain buffer" name="message" placeholder="Don't forget that kindness is all!"></textarea>
-						<input id="send" class="plain button red" type="button" value="Send a Message"> -->
 					</form>
 					<div id="success"></div>
 				</div>
@@ -39,17 +32,16 @@ permalink: contact/
 					<div class="widget">
 						<h4>Location</h4>
 						<p>
-							13, 2 Elizabeth ST,<br>
-							Melbourne, Victoria 3000,<br>
-							Australia
+							901 Red River St.<br>
+							Austin, TX 78701<br>
+							United States of America
 						</p>
 					</div>
 					<div class="widget">
 						<h4>I am Social</h4>
 						<ul class="inline meta-social">
-							<li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
-							<li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
-							<li><a href="#" class="pinterest-share border-box"><i class="fa fa-pinterest fa-lg"></i></a></li>
+							<li><a href="https://twitter.com/MisplacedYankee" class="twitter-share border-box" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
+							<li><a href="https://www.facebook.com/danny.g.mcadam" class="facebook-share border-box" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
 						</ul>
 					</div>
 				</div>
