--- a/resume.html
+++ b/resume.html
@@ -67,8 +67,8 @@ permalink: resume/
 			<div class="row-content buffer even clear-after">
 				<div class="timeline-label column six">
 					<h4>Work experience</h4>
-					<p>Specialties : Front-end frameworks (AngularJS, Backbone), user interface design, mobile-first development, payments integration (Stripe), MVP planning and development, grid based layout.</p>
-					<a class="button transparent aqua">View on Linkedin</a>
+					<p>Specialties: Front-end frameworks (AngularJS, Backbone), user interface design, mobile-first development, payments integration (Stripe), MVP planning and development, grid based layout.</p>
+					<a href="https://www.linkedin.com/profile/view?id=46660601&trk=nav_responsive_tab_profile_pic" target="_blank" class="button transparent aqua">View on Linkedin</a>
 				</div><!-- timeline-label -->
 				<div class="timeline column six last">
 					<div class="year">
@@ -127,14 +127,16 @@ permalink: resume/
 			<div class="row-content buffer even clear-after">
 			<div class="section-title"><h3>Contact</h3></div>
 				<div class="column nine">
-					<form class="contact-section">
-						<span class="pre-input"><i class="icon icon-user"></i></span>
-						<input class="name plain buffer" type="text" placeholder="Full name">
-						<span class="pre-input"><i class="icon icon-email"></i></span>
-						<input class="email plain buffer" type="email" placeholder="Email address">
-						<textarea class="plain buffer" placeholder="Don't forget that kindness is all!"></textarea>
-						<input class="plain button red" type="submit" value="Send">
+					<form accept-charset="UTF-8" action="https://formkeep.com/f/dd2b6c0c1f02" method="POST" id="contact-form" class="contact-section">
+					  <input type="hidden" name="utf8" value="✓">
+					  <span class="pre-input"><i class="icon icon-user"></i></span>
+					  <input class="name plain buffer" type="text" name="name" placeholder="Full name">
+					  <span class="pre-input"><i class="icon icon-email"></i></span>
+					  <input class="email plain buffer" type="email" name="email" placeholder="Email address">
+					  <textarea class="plain buffer" name="message" placeholder="Don't forget that kindness is all!"></textarea>
+					  <input id="send" class="plain button red" type="button" value="Send a Message">
 					</form>
+					<div id="success"></div>
 				</div>
 				<div class="column three last">
 					<div class="widget">
@@ -148,8 +150,8 @@ permalink: resume/
 					<div class="widget">
 						<h4>I am Social</h4>
 						<ul class="inline meta-social">
-							<li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
-							<li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
+							<li><a href="https://twitter.com/MisplacedYankee" class="twitter-share border-box" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
+							<li><a href="https://www.facebook.com/danny.g.mcadam" class="facebook-share border-box" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
 						</ul>
 					</div>
 				</div>
