--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@ permalink: contact/
 						<ul class="inline meta-social">
 							<li><a href="https://twitter.com/MisplacedYankee" class="twitter-share border-box" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
 							<li><a href="https://www.facebook.com/danny.g.mcadam" class="facebook-share border-box" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
+							<li><a href="https://github.com/Gamble715" class="github-share border-box" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
 						</ul>
 					</div>
 				</div>
