Tweak portfolio button styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@ permalink: portfolio/
 	<div id="main" class="row">
 		<div class="row-content buffer clear-after">
 			<ul class="inline cats filter-options">
-				<li data-group="all" class="button transparent aqua more-btn">All</li>
-				<li data-group="web-development" class="button transparent aqua more-btn">Web Development</li>
-				<li data-group="user-interface" class="button transparent aqua more-btn">User Interface</li>
-				<li data-group="marketing-site" class="button transparent aqua more-btn">Marketing Site</li>
-				<li data-group="mobile" class="button transparent aqua more-btn">Mobile</li>
+				<li data-group="all" class="button transparent aqua more-btn group">All</li>
+				<li data-group="web-development" class="button transparent aqua more-btn group">Web Development</li>
+				<li data-group="user-interface" class="button transparent aqua more-btn group">User Interface</li>
+				<li data-group="marketing-site" class="button transparent aqua more-btn group">Marketing Site</li>
+				<li data-group="mobile" class="button transparent aqua more-btn group">Mobile</li>
 			</ul>
 			<div class="grid-items portfolio-section preload">
 				{% for item in site.portfolio %}
