first blog post

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <main role="main">
   <div id="intro-wrap">
     <div id="intro" class="preload" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">
-      <div class="intro-item" style="background-color: #70767C;">
+      <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4)">
         <div class="intro-mockup-wrapper">
           <div class="caption-mockup">
             <h2>Hello, my name is Gamble.</h2>
@@ -16,7 +16,7 @@ layout: default
           </div><!-- intro-mockup -->
         </div><!-- intro-mockup-wrapper -->
       </div>
-      <div class="intro-item" style="background-color: #70767C;">
+      <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4);">
         <div class="intro-mockup-wrapper">
           <div class="caption-mockup">
             <h2>When I make things I feel good.</h2>
@@ -27,7 +27,7 @@ layout: default
           </div><!-- intro-mockup -->
         </div><!-- intro-mockup-wrapper -->
       </div>
-      <div class="intro-item" style="background-color: #70767C;">
+      <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4);">
         <div class="intro-mockup-wrapper">
           <div class="caption-mockup">
             <h2>I know the best feeling in the world.</h2>
