--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,7 @@ permalink: resume/
 				<div class="timeline-label column six">
 					<h4>Work experience</h4>
 					<p>Specialties: Front-end frameworks (AngularJS, Backbone), user interface design, mobile-first development, payments integration (Stripe), MVP planning and development, grid based layout.</p>
-					<a href="https://www.linkedin.com/profile/view?id=46660601&trk=nav_responsive_tab_profile_pic" target="_blank" class="button transparent aqua">View on Linkedin</a>
+					<a href="https://represent.io/gamble" target="_blank" class="button transparent aqua">View Resume</a>
 				</div><!-- timeline-label -->
 				<div class="timeline column six last">
 					<div class="year">
