Resize portfolio and blog images

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 permalink: blog/
 ---
 
-<main role="main" class="blog list-style">
+<main role="main" class="blog list-style single">
 	<div id="intro-wrap"  data-height="22.222">
 		<div id="intro" class="preload darken">
 			<div class="intro-item" style="background-image: url(../images/starry_night.jpg);">
