--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@ layout: default
 permalink: portfolio/
 ---
 
-<main role="main">
+<main role="main" class="single">
 	<div id="intro-wrap" class="full-height">
 		<div id="intro" class="preload darken more-button">
 			<div class="intro-item" style="background-image: url(../images/52.jpg);">
