--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@ permalink: resume/
 		<section class="row section">
 			<div class="row-content buffer even clear-after">
 			<div class="section-title"><h3>Contact</h3></div>
-				<div class="column nine">
+				<div class="column nine" id="contact">
 					<form accept-charset="UTF-8" action="https://formkeep.com/f/dd2b6c0c1f02" method="POST" id="contact-form" class="contact-section">
 					  <input type="hidden" name="utf8" value="✓">
 					  <span class="pre-input"><i class="icon icon-user"></i></span>
@@ -136,7 +136,9 @@ permalink: resume/
 					  <textarea class="plain buffer" name="message" placeholder="Don't forget that kindness is all!"></textarea>
 					  <input id="send" class="plain button red" type="button" value="Send a Message">
 					</form>
-					<div id="success"></div>
+					<p class="confirmation">
+					  Thank you!
+					</p>
 				</div>
 				<div class="column three last">
 					<div class="widget">
