--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ permalink: contact/
 			<div class="row-content buffer even clear-after">
 				<div class="section-title"><h3>Contact Me</h3></div>
 				<p>I’m a junior to mid-level full-stack developer looking for opportunities to hone my skills while creating awesome technology.<br>My goal is to make the world wide web a better place by developing immersive user experiences, one site at a time.</p>
-				<div class="column nine">
+				<div class="column nine" id="contact">
 					<form accept-charset="UTF-8" action="https://formkeep.com/f/dd2b6c0c1f02" method="POST" id="contact-form" class="contact-section">
 					  <input type="hidden" name="utf8" value="✓">
 					  <span class="pre-input"><i class="icon icon-user"></i></span>
@@ -26,7 +26,9 @@ permalink: contact/
 					  <textarea class="plain buffer" name="message" placeholder="Don't forget that kindness is all!"></textarea>
 					  <input id="send" class="plain button red" type="button" value="Send a Message">
 					</form>
-					<div id="success"></div>
+					<p class="confirmation">
+					  Thank you!
+					</p>
 				</div>
 				<div class="column three last">
 					<div class="widget">
