Resume image resize

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@ layout: default
 permalink: resume/
 ---
 
-<main role="main">
+<main role="main" class="single">
 	<div id="intro-wrap">
 		<div id="intro" class="preload darken more-button">
 			<div class="intro-item" style="background-image: url(http://unsplash.it/1800x600);">
