--- a/index.html
+++ b/index.html
@@ -3,62 +3,66 @@ layout: default
 ---
 
 <main role="main">
-  <div id="intro-wrap">
+  <div id="intro-wrap" class="single">
     <div id="intro" class="preload" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">
-      <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4)">
+      <div class="intro-item">
         <div class="intro-mockup-wrapper">
           <div class="caption-mockup">
-            <h2>Hello, my name is Gamble.</h2>
-            <p>I make things.</p>
+            <h1>Wed Fest</h1>
+            <p>Catherine and Gamble are Getting Married</p>
           </div><!-- caption -->
           <div class="intro-mockup">
-            <img src="images/affordably.png" alt="">
           </div><!-- intro-mockup -->
         </div><!-- intro-mockup-wrapper -->
       </div>
-      <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4);">
+<!--       <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4);">
         <div class="intro-mockup-wrapper">
           <div class="caption-mockup">
-            <h2>When I make things I feel good.</h2>
-            <p>When I help people make things I feel even better.</p>
-          </div><!-- caption -->
+            <h2>The Chappel Lodge Vinyards</h2>
+            <p>May 29 2016</p>
+          </div>
           <div class="intro-mockup">
             <img src="images/gibson.png" alt="">
-          </div><!-- intro-mockup -->
-        </div><!-- intro-mockup-wrapper -->
+          </div>
+        </div>
       </div>
       <div class="intro-item" style="background-color: RGBA(112, 118, 124, .4);">
         <div class="intro-mockup-wrapper">
           <div class="caption-mockup">
-            <h2>I know the best feeling in the world.</h2>
-            <p>It is when people smile using the things I make.</p>
-          </div><!-- caption -->
+            <h2>Sunday SUNDAY Sunday</h2>
+            <p>Let the party begin</p>
+          </div>
           <div class="intro-mockup">
             <img src="images/one_banana.png" alt="">
-          </div><!-- intro-mockup -->
-        </div><!-- intro-mockup-wrapper -->
-      </div>
+          </div>
+        </div>
+      </div> -->
     </div><!-- intro -->
   </div><!-- intro-wrap -->
 
-  <div id="main">
 
+
+  <div id="main">
     <section class="row section call-to-action">
       <div class="row-content buffer even">
-        <p>Would you like me to help you make things?</p>
-        <a class="button red" href="{{ site.data.routes.contact }}">Contact me now!</a>
+        <p>How can we contact you?</p>
+        <a class="button red" href="{{ site.data.routes.contact }}">Right Here!</a>
       </div>
     </section>
 
-    <section class="row section">
+    <section class="row section wrap">
+      <div id="instafeed"></div>
+    </section>
+
+    <!-- <section class="row section">
       <div class="row-content buffer even clear-after">
         <div class="column four">
           <a href="{{ site.data.routes.portfolio}}">
             <div class="small-icon red"><i class="icon icon-diamond"></i></div>
           </a>
           <div class="small-icon-text clear-after">
-            <h4>Portfolio</h4>
-            <p class="text-xs">This is a collection of the things I have made. It will always be a work in progress.</p>
+            <h4>Give me the DEETS!!</h4>
+            <p class="text-xs">Here ya Go</p>
           </div>
         </div>
         <div class="column four">
@@ -66,8 +70,8 @@ layout: default
             <div class="small-icon red"><i class="icon icon-crown"></i></div>
           </a>
           <div class="small-icon-text clear-after">
-            <h4>Resume</h4>
-            <p class="text-xs">Here you can find my proudest accomplishments, but the best is yet to come.</p>
+            <h4>Who is this shindig about?</h4>
+            <p class="text-xs">We come in Peace.</p>
           </div>
         </div>
         <div class="column four last">
@@ -75,20 +79,24 @@ layout: default
             <div class="small-icon red"><i class="icon icon-megaphone"></i></div>
           </a>
           <div class="small-icon-text clear-after">
-            <h4>Blog</h4>
-            <p class="text-xs">In case you were wondering what I have to say, or if you want to make sure I am not/am crazy.</p>
+            <h4>Random Thoughts</h4>
+            <p class="text-xs">Stuff we say</p>
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
     <section class="row section">
+      <div id='locale-map'>
+        <iframe src="http://mapbuildr.com/frame/nps2um" frameborder="0" height="500" width="500"></iframe>
+      </div>
+    </section>
+    <!-- <section class="row section">
       <div class="row-content buffer even clear-after">
         <div class="column six push-six last-special">
           <h2>Web Apps</h2>
           <p>I was taught at <a href="http://www.makersquare.com/" target="_blank">MakerSquare</a> how to make full-stack web applications.</p>
           <p><em>- Screenshots of <a href="http://www.affordably.me/demo#/daily" target="_blank">Affordably</a>.</em></p>
-          <!-- <a class="button transparent aqua" href="#">Explore</a> -->
+           <a class="button transparent aqua" href="#">Explore</a>
         </div>
         <div class="side-mockup left-mockup animation">
           <div class="slider desktop-slider" data-autoplay="3000">
@@ -107,7 +115,7 @@ layout: default
           <h2>Mobile Apps</h2>
           <p>I am self taught in the Swift language and Famous mobile framework in javascript.</p>
           <p><em>- Screenshot of <a href="http://isopods.herokuapp.com/rent" target="_blank">IsoPods</a>.</em></p>
-          <!-- <a class="button transparent aqua" href="#">Explore</a> -->
+          <a class="button transparent aqua" href="#">Explore</a>
         </div>
         <div class="side-mockup right-mockup animation">
           <div class="slider ipad-slider black" data-autoplay="false">
@@ -124,9 +132,9 @@ layout: default
         <div class="slogan animation">
           <h2>I love meeting new people!</h2>
           <p>Especially over coffee.</p>
-        </div><!-- slogan -->
+        </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- <section class="row section">
       <div class="row-content buffer even clear-after">
@@ -184,12 +192,42 @@ layout: default
       </div>
     </section> -->
 
-    <section class="row section call-to-action">
+    <!-- <section class="row section call-to-action">
       <div class="row-content buffer even animation">
         <p>Would you like to work with me?</p>
         <a class="button red" href="{{ site.data.routes.contact }}">Let me know!</a>
       </div>
-    </section>
+    </section> -->
 
   </div><!-- id-main -->
 </main><!-- main -->
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.caption-mockup h1').arctext({radius: 300});
+    {% raw %}
+    var feed = new Instafeed({
+      get: 'tagged',
+      tagName: 'sushiroll',
+      sortBy: 'most-liked',
+      limit: 12,
+      resolution: 'low_resolution',
+      limit: 24,
+      links: true,
+      resolution: 'low_resolution',
+      clientId: 'daceb2fdaad04b0da713f0dc407c5e5d',
+      template: '<div class="grid-item"><img src="{{image}}" /></div>',
+      after: function() {
+        var $container = $('#instafeed');
+
+        $container.packery({
+          itemSelector: '.grid-item',
+          gutter: 5
+        });
+      }
+    });
+    {% endraw %}
+
+    feed.run();
+
+  });
+</script>
