--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ permalink: contact/
 <main role="main">
 	<div id="intro-wrap" class="">
 		<div id="intro" class="preload darken more-button">
-			<iframe class="map" src="http://mapbuildr.com/frame/nps2um" frameborder="0" height="500" width="500"></iframe>
+			<!-- <iframe class="map" src="http://mapbuildr.com/frame/nps2um" frameborder="0" height="500" width="500"></iframe> -->
 		</div><!-- intro -->
 	</div><!-- intro-wrap -->
 
