--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8" />
 
 	<!-- Page Title -->
-	<title>Beat</title>
+	<title>Catherine & Gamble</title>
 
 	<meta name="keywords" content="onepage, single page, band template, retina ready, responsive, modern html5 template, bootstrap, css3, music, band" />
 	<meta name="description" content="Beat - Responsive One-Page Music & Band HTML5 Template" />
@@ -87,14 +87,14 @@
           </a>
 
 					<div id="social-stream">
-						<ul id="social-stream-items">
+						<!-- <ul id="social-stream-items">
 							<li>
 								<div class="icon color"><i class="icon-instagram"></i></div>
-								<div class="instagram"></div><!-- This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed -->
+								<div class="instagram"></div>This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-twitter"></i></div>
-								<div class="tweet"></div><!-- This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets -->
+								<div class="tweet"></div>This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets
 							</li>
 							<li class="featured">
 								<div class="icon"><i class="icon-expand"></i></div>
@@ -103,7 +103,7 @@
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-facebook"></i></div>
-								<div class="facebook"></div><!-- This div (with class "facebook") will be automatically popuplated with a single post from your last activity in Facebook -->
+								<div class="facebook"></div>This div (with class "facebook") will be automatically popuplated with a single post from your last activity in Facebook
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-file-text-alt"></i></div>
@@ -184,31 +184,31 @@
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-twitter"></i></div>
-								<div class="tweet"></div><!-- This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets -->
+								<div class="tweet"></div>This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-instagram"></i></div>
-								<div class="instagram"></div><!-- This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed -->
+								<div class="instagram"></div>This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-facebook"></i></div>
-								<div class="facebook"></div><!-- This div (with class "facebook") will be automatically popuplated with a single post from your last activity in Facebook -->
+								<div class="facebook"></div>This div (with class "facebook") will be automatically popuplated with a single post from your last activity in Facebook
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-instagram"></i></div>
-								<div class="instagram"></div><!-- This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed -->
+								<div class="instagram"></div>This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-twitter"></i></div>
-								<div class="tweet"></div><!-- This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets -->
+								<div class="tweet"></div>This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-instagram"></i></div>
-								<div class="instagram"></div><!-- This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed -->
+								<div class="instagram"></div>This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-twitter"></i></div>
-								<div class="tweet"></div><!-- This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets -->
+								<div class="tweet"></div>This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-file-text-alt"></i></div>
@@ -232,7 +232,7 @@
 											},
 											{
 												"title":"Watch the best moments from last night concert",
-												"txt":"Example of Vimeo embed video",
+i												"txt":"Example of Vimeo embed video",
 												"vimeo":"http://player.vimeo.com/video/74972181"
 											},
 											{
@@ -248,17 +248,17 @@
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-twitter"></i></div>
-								<div class="tweet"></div><!-- This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets -->
+								<div class="tweet"></div>This div (with class "tweet") will be automatically popuplated with a single tweet from your last tweets
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-instagram"></i></div>
-								<div class="instagram"></div><!-- This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed -->
+								<div class="instagram"></div>This div (with class "instagram") will be automatically popuplated with a single photo from your Instagram feed
 							</li>
 							<li>
 								<div class="icon color"><i class="icon-facebook"></i></div>
-								<div class="facebook"></div><!-- This div (with class "facebook") will be automatically popuplated with a single post from your last activity in Facebook -->
+								<div class="facebook"></div>This div (with class "facebook") will be automatically popuplated with a single post from your last activity in Facebook
 							</li>
-						</ul>
+						</ul> -->
 					</div>
 				</div>
 			</div>
