--- a/index.html
+++ b/index.html
@@ -640,8 +640,9 @@ END THE BAND SECTION -->
 <!-- END STORE SECTION -->
 
 <!-- BEGIN CONCERTS SECTION -->
+<!-- <div id="map_canvas"></div> -->
 <section id="concerts">
-	<div id="map_canvas"></div>
+	<iframe id="map_canvas" src="https://www.google.com/maps/d/embed?mid=zGzGdd3tOWKo.kQ9NbwIClbRc" width="640" height="400"></iframe>
 </section>
 <!-- END CONCERTS SECTION -->
 
