--- a/index.html
+++ b/index.html
@@ -642,10 +642,32 @@ END THE BAND SECTION -->
 <!-- BEGIN CONCERTS SECTION -->
 <!-- <div id="map_canvas"></div> -->
 <section id="concerts">
-	<iframe id="map_canvas" src="https://www.google.com/maps/d/embed?mid=zGzGdd3tOWKo.kQ9NbwIClbRc" width="640" height="400"></iframe>
+	<iframe id="map_canvas" src="https://www.google.com/maps/d/embed?mid=zGzGdd3tOWKo.kQ9NbwIClbRc" width="640" height="4020"></iframe>
 </section>
 <!-- END CONCERTS SECTION -->
 
+
+<section id="registry">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<h1 class="section-title center">Registries</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+				<a href="https://www.zola.com/registry/catherineandgamble" target="_blank"><img src="/img/zolalogos/logo.svg" alt="" /></a>
+			</div>
+			<div class="col-sm-4" style="margin-top:50px;">
+				<a href="https://www.anthropologie.com/anthro/registry/listing?registryId=NGFKNWY4MDJL"><img width="100%" src="https://www.anthropologie.com/images/header/logo.svg" alt="" /></a>
+			</div>
+			<div class="col-sm-4">
+				<a href="http://www.target.com/gift-registry/giftgiver?registryId=AlLlem0S6JD5OFPSzOjjEA&lnk=copiedLink"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Target_logo.svg" height="227" alt="" /></a>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- END STOR
 <!-- BEGIN GALLERY SECTION -->
 <!-- <section id="gallery">
 	<div class="container">
